update 7 files, delete 1 file and create 2 files

--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -4,7 +4,8 @@ WORKDIR /app
 
 COPY pom.xml ./
 RUN mvn dependency:resolve
-
 COPY src ./src
+ENV ENV_VALUE="TestDocker"
+RUN mvn test
 
-ENTRYPOINT ["mvn", "spring-boot:run"]
+ENTRYPOINT ["mvn", "spring-boot:test-run"]
