--- a/.github/workflows/update-patch-branch.yml
+++ b/.github/workflows/update-patch-branch.yml
@@ -21,5 +21,5 @@ jobs:
           git fetch --unshallow
           git checkout patch
           git pull
-          git merge --no-ff main -m "Auto-merge master back to patch branch"
+          git merge --no-ff origin/main -m "Auto-merge master back to patch branch"
           git push
