ci: update update-patch-branch.yml

--- a/.github/workflows/update-patch-branch.yml
+++ b/.github/workflows/update-patch-branch.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
 jobs:
   merge-master-back-to-dev:
     timeout-minutes: 2
