--- a/.github/workflows/update-patch-branch.yml
+++ b/.github/workflows/update-patch-branch.yml
@@ -3,22 +3,23 @@ name: Merge Branch
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 permissions:
   contents: write
 jobs:
-  merge-master-back-to-dev:
+  merge-main-to-patch:
     timeout-minutes: 2
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set Git config
+
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Set git config
       run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "Github Actions"
-    - name: Merge master back to dev
+    - name: Merge main back to dev
       run: |
           git fetch --unshallow
           git checkout patch
