Add Spring Boot Actuator dependency and expose all endpoints

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -24,3 +24,9 @@ spring:
         service-registry:
             auto-registration:
                 fail-fast: true
+
+management:
+    endpoints:
+        web:
+            exposure:
+                include: '*'
