--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -17,3 +17,9 @@ spring:
 
 key:
   something: ${ENV_VALUE}
+
+management:
+    endpoints:
+        web:
+            exposure:
+                include: '*'
