--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -14,3 +14,9 @@ eureka:
   server:
     waitTimeInMsWhenSyncEmpty: 0
     response-cache-update-interval-ms: 5000
+
+management:
+    endpoints:
+        web:
+            exposure:
+                include: '*'
